--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,14 @@
             <version>8.0.22</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
+    
 
     <build>
         <plugins>
