--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,14 +4,21 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
-    <servlet>
-        <servlet-name>Faces Servlet</servlet-name>
-        <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
+     <servlet>
+        <servlet-name>ControleCurso</servlet-name>
+        <servlet-class>br.com.fatecmc.prossiga.model.controle.ControleCurso</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>/faces/*</url-pattern>
+        <servlet-name>ControleCurso</servlet-name>
+        <url-pattern>/CtrlCurso</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>ControleProfessor</servlet-name>
+        <servlet-class>br.com.fatecmc.prossiga.model.controle.ControleProfessor</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ControleProfessor</servlet-name>
+        <url-pattern>/CtrlProfessor</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
